--- a/example/ze15_co/ze15_co_example.yaml
+++ b/example/ze15_co/ze15_co_example.yaml
@@ -14,6 +14,11 @@ logger:
 api:
 ota:
 
+# External component from GitHub
+external_components:
+  - source: github://Bjk8kds/esphome-winsen-co-sensor
+    components: [ ze15_co ]
+
 # UART configuration for ZE15-CO
 uart:
   id: uart_ze15
